--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+# .gitignore
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+.env
+.DS_Store
+
